--- a/Presentation/Poul.tex
+++ b/Presentation/Poul.tex
@@ -1,8 +1,8 @@
 
-\section{Optimering}
-\begin{frame}{Optimering}{}
-Pouk Hoang	
-\end{frame}
+%\section{Optimering}
+%\begin{frame}{Optimering}{Poul Hoang}
+%
+%\end{frame}
 
 \subsection{Relevante optimerings muligheder}
 \begin{frame}{Optimering}{Relevante optimerings muligheder}
@@ -34,7 +34,7 @@ Generel reducering af anvendte instruktioner
 \item Dobbelt initialisering af buffere. (30 – 40 instruktioner) 
 \item Reservering af cirkulære buffere
 \begin{itemize}
-\item TMS320C5515 kan initialisere frem cirkulære buffere
+\item TMS320C5515 kan initialisere fem cirkulære buffere
 \item Fire kan reseveres til udvalgte filtre
 \item Færre instruktioner på initialisering (10 - 20 instruktioner)
 \end{itemize}
